--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -8,37 +8,37 @@
     <main>
         <section class="container-fluid mb-63px">
             <div class="row parallax-section">
-                <article class="col-12 col-md-6 parallax-article bg-img-projects d-flex justify-content-center align-items-center">
-                    <div class="caption-container p-3">
+                <article class="col-6 parallax-article bg-img-projects d-flex justify-content-center align-items-center">
+                    <div class="text-center caption-container p-3">
                         <a class="text-pwhite text-capitalize grouch shdw spc pt-40" href="#proyectos">proyectos</a>
                     </div>
                 </article>
-                <article class="col-12 col-md-6 parallax-article bg-img-services d-flex justify-content-center align-items-center">
-                    <div class="caption-container p-3">
+                <article class="col-6 parallax-article bg-img-services d-flex justify-content-center align-items-center">
+                    <div class="text-center caption-container p-3">
                         <a class="text-pwhite text-capitalize grouch shdw spc pt-40" href="#servicios">servicios</a>
                     </div>
                 </article>
             </div>
             <div class="row parallax-section">
-                <article class="col-12 col-md-6 parallax-article bg-img-us d-flex justify-content-center align-items-center">
-                    <div class="caption-container p-3">
-                        <a class="text-pwhite grouch shdw spc pt-40" href="#nosotros">Sobre nosotros</a>
+                <article class="col-6 parallax-article bg-img-us d-flex justify-content-center align-items-center">
+                    <div class="text-center caption-container p-3">
+                        <a class="text-pwhite grouch shdw spc pt-40" href="#nosotros">Sobre Nosotros</a>
                     </div>
                 </article>
-                <article class="col-12 col-md-6 parallax-article bg-img-staff d-flex justify-content-center align-items-center">
-                    <div class="caption-container p-3">
-                        <a class="text-pwhite grouch shdw spc pt-40" href="#equipo">Nuestro equipo</a>
+                <article class="col-6 parallax-article bg-img-staff d-flex justify-content-center align-items-center">
+                    <div class="text-center caption-container p-3">
+                        <a class="text-pwhite grouch shdw spc pt-40" href="#equipo">Nuestro Equipo</a>
                     </div>
                 </article>
             </div>
             <div class="row parallax-section mb-3">
-                <article class="col-12 col-md-6 parallax-article bg-img-partners d-flex justify-content-center align-items-center">
-                    <div class="caption-container p-3">
+                <article class="col-6 parallax-article bg-img-partners d-flex justify-content-center align-items-center">
+                    <div class="text-center caption-container p-3">
                         <a class="text-pwhite text-capitalize grouch shdw spc pt-40" href="#aliados">aliados</a>
                     </div>
                 </article>
-                <article class="col-12 col-md-6 parallax-article bg-img-contact d-flex justify-content-center align-items-center">
-                    <div class="caption-container p-3">
+                <article class="col-6 parallax-article bg-img-contact d-flex justify-content-center align-items-center">
+                    <div class="text-center caption-container p-3">
                         <a class="text-pwhite text-capitalize grouch shdw spc pt-40" href="#contacto">contáctanos</a>
                     </div>
                 </article>
@@ -92,7 +92,7 @@
                 <h4 class="col-10 text-pwhite text-capitalize mb-82px kabel-demi pt-55">proyectos</h4>
             </div>
             <div class="row parallax-section">
-                <article class="col-12 col-md-6 parallax-article bg-img-fumo d-flex justify-content-center align-items-center to-blur">
+                <article class="col-6 parallax-article bg-img-fumo d-flex justify-content-center align-items-center to-blur">
                     <div class="caption-container grey-wrapper p-3">
                         <a href="#" data-bs-toggle="modal" data-bs-target="#fumo-viewer">
                             <h3 class="text-pwhite text-center grouch shdw spc pt-22">Videoclip - Fumo y Bebo</h3>
@@ -122,7 +122,7 @@
                         </div>
                     </div>
                 </div>
-                <article class="col-12 col-md-6 parallax-article bg-img-restos d-flex justify-content-center align-items-center to-blur">
+                <article class="col-6 parallax-article bg-img-restos d-flex justify-content-center align-items-center to-blur">
                     <div class="caption-container grey-wrapper p-3">
                         <a href="#">
                             <p class="text-center text-pwhite text-uppercase grouch shdw spc pt-18">coming soon</p>
@@ -133,14 +133,14 @@
                 </article>
             </div>
             <div class="row parallax-section">
-                <article class="col-12 col-md-6 parallax-article bg-img-opening d-flex justify-content-center align-items-center to-blur">
+                <article class="col-6 parallax-article bg-img-opening d-flex justify-content-center align-items-center to-blur">
                     <div class="caption-container grey-wrapper p-3">
                         <a href="#">
                             <h3 class="text-pwhite text-center grouch shdw spc pt-22">Opening Concierto</h3>
                         </a>
                     </div>
                 </article>
-                <article class="col-12 col-md-6 parallax-article bg-img-tarde d-flex justify-content-center align-items-center to-blur">
+                <article class="col-6 parallax-article bg-img-tarde d-flex justify-content-center align-items-center to-blur">
                     <div class="caption-container grey-wrapper p-3">
                         <a href="#" data-bs-toggle="modal" data-bs-target="#tarde-viewer">
                             <h3 class="text-pwhite text-center grouch shdw spc pt-22">Videoclip - Volviste Tarde</h3>
@@ -172,7 +172,7 @@
                 </div>
             </div>
             <div class="row parallax-section">
-                <article class="col-12 col-md-6 parallax-article bg-img-transmi d-flex justify-content-center align-items-center to-blur">
+                <article class="col-6 parallax-article bg-img-transmi d-flex justify-content-center align-items-center to-blur">
                     <div class="caption-container grey-wrapper p-3">
                         <a href="#" data-bs-toggle="modal" data-bs-target="#transmi-viewer">
                             <h3 class="text-pwhite text-center grouch shdw spc pt-22"><p>Transmilenials - Piloto</p>Coproductores</h3>
@@ -196,7 +196,7 @@
                         </div>
                     </div>
                 </div>
-                <article class="col-12 col-md-6 parallax-article bg-img-pipe d-flex justify-content-center align-items-center to-blur">
+                <article class="col-6 parallax-article bg-img-pipe d-flex justify-content-center align-items-center to-blur">
                     <div class="caption-container grey-wrapper p-3">
                         <a href="#" data-bs-toggle="modal" data-bs-target="#">
                             <h3 class="text-pwhite text-center grouch shdw spc pt-22">Concierto 15 años Pipe Bueno</h3>
@@ -205,14 +205,14 @@
                 </article>
             </div>
             <div class="row parallax-section">
-                <article class="col-12 col-md-6 parallax-article bg-img-behind d-flex justify-content-center align-items-center to-blur">
+                <article class="col-6 parallax-article bg-img-behind d-flex justify-content-center align-items-center to-blur">
                     <div class="caption-container grey-wrapper p-3">
                         <a href="#" data-bs-toggle="modal" data-bs-target="#">
                             <h3 class="text-pwhite text-center grouch shdw spc pt-22">Behind the Scenes - Pipe Bueno</h3>
                         </a>
                     </div>
                 </article>
-                <article class="col-12 col-md-6 parallax-article bg-img-fuera d-flex justify-content-center align-items-center to-blur">
+                <article class="col-6 parallax-article bg-img-fuera d-flex justify-content-center align-items-center to-blur">
                     <div class="caption-container grey-wrapper p-3">
                         <a href="#" data-bs-toggle="modal" data-bs-target="#fuera-viewer">
                             <h3 class="text-pwhite text-center grouch shdw spc pt-22">Podcast - Fuera de Set</h3>
@@ -248,7 +248,7 @@
                 </div>
             </div>
             <div class="row parallax-section">
-                <article class="col-12 col-md-6 parallax-article bg-img-misteriosa d-flex justify-content-center align-items-center to-blur">
+                <article class="col-6 parallax-article bg-img-misteriosa d-flex justify-content-center align-items-center to-blur">
                     <div class="caption-container grey-wrapper p-3">
                         <a href="#" data-bs-toggle="modal" data-bs-target="#misteriosa-viewer">
                             <h3 class="text-pwhite text-center grouch shdw spc pt-22">Misteriosa - Piloto Coproductores</h3>
@@ -272,7 +272,7 @@
                         </div>
                     </div>
                 </div>
-                <article class="col-12 col-md-6 parallax-article bg-img-nono d-flex justify-content-center align-items-center to-blur">
+                <article class="col-6 parallax-article bg-img-nono d-flex justify-content-center align-items-center to-blur">
                     <div class="caption-container grey-wrapper p-3">
                         <a href="#" data-bs-toggle="modal" data-bs-target="#no-no-viewer">
                             <h3 class="text-pwhite text-center grouch shdw spc pt-22">Videoclip - No me digas que no</h3>
@@ -304,7 +304,7 @@
                 </div>
             </div>
             <div class="row parallax-section">
-                <article class="col-12 col-md-6 parallax-article bg-img-cantina d-flex justify-content-center align-items-center to-blur">
+                <article class="col-6 parallax-article bg-img-cantina d-flex justify-content-center align-items-center to-blur">
                     <div class="caption-container grey-wrapper p-3">
                         <a href="#" data-bs-toggle="modal" data-bs-target="#cantina-viewer">
                             <h3 class="text-pwhite text-center grouch shdw spc pt-22">Videoclip - La Cantina</h3>
@@ -334,7 +334,7 @@
                         </div>
                     </div>
                 </div>
-                <article class="col-12 col-md-6 parallax-article bg-img-casa d-flex justify-content-center align-items-center to-blur">
+                <article class="col-6 parallax-article bg-img-casa d-flex justify-content-center align-items-center to-blur">
                     <div class="caption-container grey-wrapper p-3">
                         <a href="#" data-bs-toggle="modal" data-bs-target="#">
                             <h3 class="text-pwhite text-center grouch shdw spc pt-22"><p>Capsulas - La Casa del</p>Diseño Colombiano</h3>
@@ -343,14 +343,14 @@
                 </article>
             </div>
             <div class="row parallax-section">
-                <article class="col-12 col-md-6 parallax-article bg-img-movistar d-flex justify-content-center align-items-center to-blur">
+                <article class="col-6 parallax-article bg-img-movistar d-flex justify-content-center align-items-center to-blur">
                     <div class="caption-container grey-wrapper p-3">
                         <a href="#" data-bs-toggle="modal" data-bs-target="#">
                             <h3 class="text-pwhite text-center grouch shdw spc pt-22">Concierto Movistar</h3>
                         </a>
                     </div>
                 </article>
-                <article class="col-12 col-md-6 parallax-article bg-img-off d-flex justify-content-center align-items-center to-blur">
+                <article class="col-6 parallax-article bg-img-off d-flex justify-content-center align-items-center to-blur">
                     <div class="caption-container grey-wrapper p-3">
                         <a href="#" data-bs-toggle="modal" data-bs-target="#">
                             <p class="text-center text-pwhite text-uppercase grouch shdw spc pt-18">coming soon</p>
@@ -697,21 +697,21 @@
                 <h5 class="text-center text-pwhite text-capitalize kabel-demi pt-55">aliados</h5>
             </div>
             <div class="row d-flex flex-wrap justify-content-between align-items-center brands-3 mb-7">
-                <div class="col-md-3">
+                <div class="col-3">
                     <img class="l-tengo" src="/img/fotos version 1900x--/aliados logos/la tengo 532 x 320.png" alt="La Tengo - Agencia">
                 </div>
-                <div class="col-md-5 d-flex justify-content-center">
+                <div class="col-5 d-flex justify-content-center">
                     <img class="casa-dc" src="/img/fotos version 1900x--/aliados logos/la casa del diseño 790 x 164.png" alt="La casa del diseño Colombiano">
                 </div>
-                <div class="col-md-3">
+                <div class="col-3">
                     <img class="proyectil" src="/img/fotos version 1900x--/aliados logos/540 x 260 proyectil.png" alt="Proyectil">
                 </div>
             </div>
             <div class="row d-flex flex-wrap justify-content-center align-items-center">
-                <div class="col-md-2">
+                <div class="col-2">
                     <img class="FHC" src="/img/fotos version 1900x--/aliados logos/ong 481 x 483.png" alt="Fundación Héroes de Colombia">
                 </div>
-                <div class="col-md-2">
+                <div class="col-2">
                     <img class="PipeB" src="/img/fotos version 1900x--/aliados logos/pipe bueno 305x463.png" alt="Pipe Bueno">
                 </div>
             </div>
@@ -726,21 +726,21 @@
                         <h5 class="text-center text-pwhite kabel-med pt-18">Déjanos contar tu historia!</h5>
                     </div>
                     <div class="row d-flex flex-wrap justify-content-center">
-                        <div class="col-md-5 mb-form">
+                        <div class="col-5 mb-form">
                             <input class="w-100 form-control popps-r" type="text" name="name" placeholder="Nombre" required>
                         </div>
-                        <div class="col-md-5 mb-form">
+                        <div class="col-5 mb-form">
                             <input class="w-100 form-control popps-r" type="text" name="surname" placeholder="Apellidos" required>
                         </div>
-                        <div class="col-md-5 mb-form">
+                        <div class="col-5 mb-form">
                             <input class="w-100 form-control popps-r" type="email" name="email" placeholder="Correo electrónico" required>
                         </div>
-                        <div class="col-md-5 mb-form">
+                        <div class="col-5 mb-form">
                             <input class="w-100 form-control popps-r" type="text" name="mobileNumber" placeholder="Celular">
                         </div>
                     </div>
                     <div class="row d-flex justify-content-center">
-                        <div class="col-md-10 mb-form">
+                        <div class="col-10 mb-form">
                             <textarea class="w-100 form-control" cols="30" rows="10" name="message" placeholder="Mensaje"></textarea>
                         </div>
                     </div>
