--- a/public/css/headerMobile.css
+++ b/public/css/headerMobile.css
@@ -1,18 +1,26 @@
 @media (max-width: 768px) {
+    header {
+        height: 50vw !important;
+    }
+
     .navbar-collapse {
         justify-content: flex-end;
         text-align: end;
     }
-/*     .navbar-nav {
-        position: static;
-        margin: 0;
-        padding-top: 1.1447vh;
-    } */
+
+    .navbar-nav {
+        right: 5.7vw !important;
+        top: 12vw !important;
+    }
+
     .nav-link {
+        font-size: 0.75em;
+        line-height: 0.3em;
         margin-left: 0;
     }
 
     .navbar-brand {
-        left: 8vw !important;
+        top: 3vh;
+        width: 34.1121vw !important;
     }
 }
