--- a/src/views/includes/footer.ejs
+++ b/src/views/includes/footer.ejs
@@ -1,38 +1,38 @@
 <footer class="container-fluid">
     <div class="row d-flex flex-wrap justify-content-center align-items-center mb-3">
-        <div class="contact-details col-md-4 d-flex flex-wrap align-items-center mb-4">
-            <div class="row col-md-12 d-flex flex-wrap mb-3 align-items-center">
-                <div class="col-md-2">
+        <div class="contact-details col-4 d-flex flex-wrap align-items-center mb-4">
+            <div class="row col-12 d-flex flex-wrap mb-3 align-items-center">
+                <div class="col-2">
                     <a class="text-pwhite text-center kabel-med" href="https://wa.me/573208137288"><i class="bi bi-whatsapp pt-30"></i></a>
                 </div>
-                <div class="col-md-6">
+                <div class="col-6">
                     <a class="text-pwhite kabel-med pt-16" href="https://wa.me/573208137288">+57 320 813 72 88</a> 
                 </div>
             </div>
-            <div class="row col-md-12 d-flex flex-wrap align-items-center">
-                <div class="col-md-2">
+            <div class="row col-12 d-flex flex-wrap align-items-center">
+                <div class="col-2">
                     <a class="text-pwhite text-center" href="mailto:taketwo2films@gmail.com"><i class="bi bi-envelope pt-30"></i></a>
                 </div>
-                <div class="col-md-8">
+                <div class="col-8">
                     <a class="text-pwhite kabel-med pt-16" href="mailto:taketwo2films@gmail.com">Email: taketwo2films@gmail.com</a>
                 </div>
             </div>
         </div>
-        <div class="social-media col-md-4 mb-4">
+        <div class="social-media col-4 mb-4">
             <div class="row d-flex flex-wrap justify-content-center">
-                <div class="col-md-1 d-flex justify-content-center">
+                <div class="col-1 d-flex justify-content-center">
                     <a href="" class="text-pwhite text-center"><i class="bi bi-youtube pt-30"></i></a>
                 </div>
-                <div class="col-md-1 d-flex justify-content-center">
+                <div class="col-1 d-flex justify-content-center">
                     <a href="https://vimeo.com/user218430061" class="text-pwhite text-center"><i class="bi bi-vimeo pt-30"></i></a>
                 </div>
-                <div class="col-md-1 d-flex justify-content-center">
+                <div class="col-1 d-flex justify-content-center">
                     <a href="https://www.linkedin.com/company/take-two-films/" class="text-pwhite text-center"><i class="bi bi-linkedin pt-30"></i></a>
                 </div>
-                <div class="col-md-1 d-flex justify-content-center">
+                <div class="col-1 d-flex justify-content-center">
                     <a href="https://www.tiktok.com/@taketwofilms1?_t=8mA8w8QQwS6&_r=1" class="text-pwhite text-center"><i class="bi bi-tiktok pt-30"></i></a>
                 </div>
-                <div class="col-md-1 d-flex justify-content-center">
+                <div class="col-1 d-flex justify-content-center">
                     <a href="https://www.instagram.com/take2.films?igsh=MWo0NTJoeXlxbzF5aw==" class="text-pwhite text-center"><i class="bi bi-instagram pt-30"></i></a>
                 </div>
             </div>
@@ -41,7 +41,7 @@
     <div class="separator mb-3"></div>
     <div class="row d-flex justify-content-center align-items-center copy mb-3">
         <img src="/img/t2f_logo.png" alt="T2F logo">
-        <div class="col-md-5">
+        <div class="col-5">
             <span class="text-pwhite ail-r pt-14">Copyright 2010-2024 Take 2 Films company Colombia Bogotá all rights reserved.</span>
         </div>
     </div>
