--- a/src/views/includes/footer.ejs
+++ b/src/views/includes/footer.ejs
@@ -14,7 +14,7 @@
                     <a class="text-pwhite text-center" href="mailto:taketwo2films@gmail.com"><i class="bi bi-envelope pt-30"></i></a>
                 </div>
                 <div class="col-8">
-                    <a class="text-pwhite kabel-med pt-16" href="mailto:taketwo2films@gmail.com">Email: taketwo2films@gmail.com</a>
+                    <a class="text-pwhite kabel-med pt-16" href="mailto:taketwo2films@gmail.com">taketwo2films@gmail.com</a>
                 </div>
             </div>
         </div>
