--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -21,13 +21,13 @@
             </div>
             <div class="row parallax-section">
                 <article class="col-6 parallax-article bg-img-us d-flex justify-content-center align-items-center">
-                    <div class="text-center caption-container p-3">
-                        <a class="text-pwhite grouch shdw spc pt-40" href="#nosotros">Sobre Nosotros</a>
+                    <div class="text-center text-capitalize caption-container p-3">
+                        <a class="text-pwhite grouch shdw spc pt-40" href="#nosotros">sobre nosotros</a>
                     </div>
                 </article>
                 <article class="col-6 parallax-article bg-img-staff d-flex justify-content-center align-items-center">
-                    <div class="text-center caption-container p-3">
-                        <a class="text-pwhite grouch shdw spc pt-40" href="#equipo">Nuestro Equipo</a>
+                    <div class="text-center text-capitalize caption-container p-3">
+                        <a class="text-pwhite grouch shdw spc pt-40" href="#equipo">nuestro equipo</a>
                     </div>
                 </article>
             </div>
@@ -66,8 +66,8 @@
                 </div>
             </div>
             <div class="row d-flex justify-content-center mb-7">
-                <h5 class="text-pwhite text-center kabel-med pt-30">Cada familia tiene una historia</h5>
-                <h5 class="text-pwhite text-center text-uppercase mb-63px kabel-med pt-30">¡Esta es la nuestra!</h5>
+                <h5 class="text-pwhite text-center text-uppercase kabel-med pt-30">cada familia tiene una historia</h5>
+                <h5 class="text-pwhite text-center text-uppercase mb-63px kabel-med pt-30">¡esta es la nuestra!</h5>
                 <div class="col-12 d-flex justify-content-center mb-82px">
                     <div class="video-container position-relative">
                         <img src="/img/fotos version 1900x--/reel t2f 950x 596.png" class="img-fluid" alt="Video thumbnail">
@@ -339,7 +339,7 @@
                 <article class="col-6 parallax-article bg-img-movistar d-flex justify-content-center align-items-center to-blur">
                     <div class="caption-container grey-wrapper p-3">
                         <a href="#" data-bs-toggle="modal" data-bs-target="#">
-                            <h3 class="text-pwhite text-center grouch shdw spc pt-22">Concierto Movistar</h3>
+                            <h3 class="text-pwhite text-center grouch shdw spc pt-22">Concierto Movistar Arena</h3>
                         </a>
                     </div>
                 </article>
@@ -357,7 +357,7 @@
             <div class="row d-flex flex-wrap justify-content-center">
                 <h4 class="text-pwhite text-capitalize col-12 text-center mb-5 kabel-demi pt-55">servicios</h4>
                 <div class="col-md-8">
-                    <p class="text-pwhite text-justify mb-4 popps-r pt-18">Somos una Empresa 100% Colombiana que Ofrece servicios de producción con un enfoque fresco y vanguardista para la realización de obras cinematográficas, series, videoclips y producciones audiovisuales publicitarias. A través de La Ley 1556 que hace parte de la normatividad para la industria audiovisual.</p>
+                    <p class="text-pwhite text-justify mb-4 popps-r pt-18">Somos una Empresa 100% Colombiana que Ofrece servicios de producción con un enfoque fresco y vanguardista para la realización de obras cinematográficas, series, videoclips y publicidad. A través de La Ley 1556 que hace parte de la normatividad para la industria audiovisual.</p>
                     <p class="text-pwhite text-justify mb-4 popps-r pt-18">En nuestro equipo, abordamos todos los aspectos de la creación audiovisual con un enfoque fresco y vanguardista. Nuestro talentoso equipo profesional y creativo se ocupa de cada etapa: desarrollo, preproducción, producción y postproducción.</p>
                     <p class="text-pwhite text-justify mb-148px popps-r pt-18">Comprometidos a impulsar cada proyecto con creatividad y pasión, asegurando que cada narrativa audiovisual cobre vida de manera única. Estamos dedicados a transformar ideas en experiencias visuales impactantes y memorables que conecten al mundo.</p>
                 </div>
@@ -428,8 +428,8 @@
         <section class="container-fluid mb-200px" id="equipo">
             <div class="row d-flex flex-wrap justify-content-center mb-7">
                 <div class="col-md-9">
-                    <h4 class="text-center text-pwhite mb-5 kabel-demi pt-55">Nuestro equipo</h4>
-                    <p class="text-pwhite text-center kabel-med pt-30">Déjanos contar tu historia</p>
+                    <h4 class="text-center text-pwhite mb-5 kabel-demi pt-55">Nuestro Equipo</h4>
+                    <p class="text-pwhite text-center kabel-med pt-30">Juntos, transformamos ideas en realidad</p>
                 </div>
             </div>
             <div class="row d-flex flex-wrap justify-content-center">
