--- a/public/css/homeMobile.css
+++ b/public/css/homeMobile.css
@@ -12,39 +12,39 @@
     }
 
     .parallax-section > .bg-img-projects {
-      background-image: url("/img/fotos version movile 428 X 908/seccion1/fondo proyectos 214X322.png") !important;
+      background-image: url("/img/fotos version mobile 428 X 908/seccion1/1-1 fondo proyectos 214X322.png") !important;
     }
 
     .parallax-section > .bg-img-services{
-      background-image: url("/img/fotos version movile 428 X 908/seccion1/Servicios 214 x 322.png") !important;
+      background-image: url("/img/fotos version mobile 428 X 908/seccion1/2-Servicios 214 x 322.png") !important;
     }
 
     .parallax-section > .bg-img-us{
-      background-image: url("/img/fotos version movile 428 X 908/seccion1/Sobre nosotros 214 X 322.png") !important;
+      background-image: url("/img/fotos version mobile 428 X 908/seccion1/5-Sobre nosotros 214 X 322.png") !important;
     }
 
     .parallax-section > .bg-img-staff {
-      background-image: url("/img/fotos version movile 428 X 908/seccion1/nuestro equipo fondo 214 x 322.png") !important;
+      background-image: url("/img/fotos version mobile 428 X 908/seccion1/3-1nuestro equipo fondo 214 x 322.png") !important;
     }
 
     .parallax-section > .bg-img-partners {
-      background-image: url("/img/fotos version movile 428 X 908/seccion1/fondo aliados 214X322.png") !important;
+      background-image: url("/img/fotos version mobile 428 X 908/seccion1/4-1fondo aliados 214X322.png") !important;
     }
 
     .parallax-section > .bg-img-contact{
-      background-image: url("/img/fotos version movile 428 X 908/seccion1/contactanos 214X322.png") !important;
+      background-image: url("/img/fotos version mobile 428 X 908/seccion1/6-contactanos 214X322.png") !important;
     }
 
     .parallax-section > .bg-img-projects.focus, .parallax-section > .bg-img-projects:hover {
-      background-image: url("/img/fotos version movile 428 X 908/seccion1/proyectos con gente 214x322.png") !important;
+      background-image: url("/img/fotos version mobile 428 X 908/seccion1/1-2proyectos con gente 214x322.png") !important;
     }
 
     .parallax-section > .bg-img-partners.focus, .parallax-section > .bg-img-partners:hover {
-      background-image: url("/img/fotos version movile 428 X 908/seccion1/aliados con silla 214X322.png") !important;
+      background-image: url("/img/fotos version mobile 428 X 908/seccion1/4-2aliados con silla 214X322.png") !important;
     }
 
     .parallax-section > .bg-img-partners.focus, .parallax-section > .bg-img-staff:hover {
-      background-image: url("/img/fotos version movile 428 X 908/seccion1/nuestro equipo 214 x 322.png") !important;
+      background-image: url("/img/fotos version mobile 428 X 908/seccion1/3-2nuestro equipo 214 x 322.png") !important;
     }
 
     a.grouch.pt-40{
@@ -107,50 +107,54 @@
 
     /* --------- Projects backgrounds ---------*/
 
-    .parallax-section > .bg-img-fumo {
-      background-image: url("/img/fotos version movile 428 X 908/seccion 2 proyectos/videoclip fumo y bebo 214 x 322 .png") !important;
-    }
-
-    .parallax-section > .bg-img-restos {
-      background-image: url("/img/fotos version movile 428 X 908/seccion 2 proyectos/Coming soon cortometraje los restos de la cama coproductores 214x322.png") !important;
-    }
-
-    .parallax-section > .bg-img-opening {
-      background-image: url("/img/fotos version movile 428 X 908/seccion 2 proyectos/opening concierto 214 x 322.png") !important;
-    }
-    .parallax-section > .bg-img-tarde  {
-      background-image: url("/img/fotos version movile 428 X 908/seccion 2 proyectos/video clip volviste tarde 214x322.png") !important;
-    }
-    .parallax-section > .bg-img-transmi {
-      background-image: url("/img/fotos version movile 428 X 908/seccion 2 proyectos/transmilenials piloto coproductores 214x322.png") !important;
-    }
-    .parallax-section > .bg-img-pipe {
-      background-image: url("/img/fotos version movile 428 X 908/seccion 2 proyectos/concierto 15 años pipe bueno 214x322.png") !important;
-    }
-    .parallax-section > .bg-img-behind {
-      background-image: url("/img/fotos version 1900x--/Fotos seccion2  proyectos/Behind the scenes - pipe bueno 950 x 956.png");
-    }
-    .parallax-section > .bg-img-fuera {
-      background-image: url("/img/fotos version movile 428 X 908/seccion 2 proyectos/podcast - fuera de set  214 x 322 .png") !important;
-    }
-    .parallax-section > .bg-img-misteriosa {
-      background-image: url("/img/fotos version movile 428 X 908/seccion 2 proyectos/misteriosa coproductores 214 x 322 .png") !important;
-    }
-    .parallax-section > .bg-img-nono {
-      background-image: url("/img/fotos version movile 428 X 908/seccion 2 proyectos/video clip no me digas que no  214x322.png") !important;
-    }
-    .parallax-section > .bg-img-cantina {
-      background-image: url("/img/fotos version movile 428 X 908/seccion 2 proyectos/video clip la cantina 214x322.png") !important;
-    }
-    .parallax-section > .bg-img-casa {
-      background-image: url("/img/fotos version movile 428 X 908/seccion 2 proyectos/capsulas la casa del diseño colombiano 214 x 322.png") !important;
-    }
-    .parallax-section > .bg-img-movistar {
-      background-image: url("/img/fotos version movile 428 X 908/seccion 2 proyectos/concierto moviestar 214 x 322.png") !important;
-    }
-    .parallax-section > .bg-img-off {
-      background-image: url("/img/fotos version 1900x--/Fotos seccion2  proyectos/COMING SOON podcast voz en off 950 x 956.png");
-    }
+    .parallax-section > .bg-img-antitusa {
+      background-image: url("/img/fotos version mobile 428 X 908/seccion 2 proyectos/1-Serie-Tips Antitusa  214 x 322.png") !important;
+  }
+  
+  .parallax-section > .bg-img-restos {
+      background-image: url("/img/fotos version mobile 428 X 908/seccion 2 proyectos/2-Coming soon cortometraje los restos de la cama coproductores 214x322.png") !important;;
+  }
+  
+  .parallax-section > .bg-img-opening {
+      background-image: url("/img/fotos version mobile 428 X 908/seccion 2 proyectos/3-opening concierto 214 x 322.png") !important;
+  }
+  
+  .parallax-section > .bg-img-fumo {
+      background-image: url("/img/fotos version mobile 428 X 908/seccion 2 proyectos/4-videoclip fumo y bebo 214 x 322 .png") !important;
+  }
+  
+  .parallax-section > .bg-img-transmi {
+      background-image: url("/img/fotos version mobile 428 X 908/seccion 2 proyectos/5-transmilenials piloto coproductores 214x322.png") !important;;
+  }
+  .parallax-section > .bg-img-pipe {
+      background-image: url("/img/fotos version mobile 428 X 908/seccion 2 proyectos/6-concierto 15 aคos pipe bueno 214x322.png") !important;
+  }
+  
+  .parallax-section > .bg-img-tarde  {
+      background-image: url("/img/fotos version mobile 428 X 908/seccion 2 proyectos/7-video clip volviste tarde 214x322.png") !important;
+  }
+  
+  .parallax-section > .bg-img-fuera {
+      background-image: url("/img/fotos version mobile 428 X 908/seccion 2 proyectos/8-podcast - fuera de set  214 x 322 .png") !important;
+  }
+  .parallax-section > .bg-img-misteriosa {
+      background-image: url("/img/fotos version mobile 428 X 908/seccion 2 proyectos/9-misteriosa coproductores 214 x 322 .png") !important;;
+  }
+  .parallax-section > .bg-img-nono {
+      background-image: url("/img/fotos version mobile 428 X 908/seccion 2 proyectos/10-video clip no me digas que no  214x322.png") !important;
+  }
+  .parallax-section > .bg-img-cantina {
+      background-image: url("/img/fotos version mobile 428 X 908/seccion 2 proyectos/11-video clip la cantina 214x322.png") !important;
+  }
+  .parallax-section > .bg-img-casa {
+      background-image: url("/img/fotos version mobile 428 X 908/seccion 2 proyectos/12-capsulas la casa del diseคo colombiano 214 x 322.png") !important;;
+  }
+  .parallax-section > .bg-img-movistar {
+      background-image: url("/img/fotos version mobile 428 X 908/seccion 2 proyectos/13-concierto moviestar arena 214 x 322.png") !important;
+  }
+  .parallax-section > .bg-img-off {
+      background-image: url("/img/fotos version mobile 428 X 908/seccion 2 proyectos/14-Coming soon Podcast Voz en OFF 214 x 322 .png") !important;
+  }
 
     /* --------- Carousel ---------*/
 
