--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -66,8 +66,8 @@
                 </div>
             </div>
             <div class="row d-flex justify-content-center mb-7">
-                <h5 class="text-pwhite text-center text-uppercase kabel-med pt-30">cada familia tiene una historia</h5>
-                <h5 class="text-pwhite text-center text-uppercase mb-63px kabel-med pt-30">¡esta es la nuestra!</h5>
+                <h5 class="text-pwhite text-center text-uppercase kabel-med pt-30">¡cada familia tiene una historia</h5>
+                <h5 class="text-pwhite text-center text-uppercase mb-63px kabel-med pt-30">esta es la nuestra!</h5>
                 <div class="col-12 d-flex justify-content-center mb-82px">
                     <div class="video-container position-relative">
                         <img src="/img/fotos version 1900x--/reel t2f 950x 596.png" class="img-fluid" alt="Video thumbnail">
