Added laptop layout

--- a/src/views/includes/head.ejs
+++ b/src/views/includes/head.ejs
@@ -12,9 +12,11 @@
 <link rel="stylesheet" href="/css/styles.css">
 <link rel="stylesheet" href="/css/headerMobile.css" type="text/css">
 <link rel="stylesheet" href="/css/headerTablet.css" type="text/css">
+<link rel="stylesheet" href="/css/headerLaptop.css" type="text/css">
 <link rel="stylesheet" href="/css/headerDesktop.css" type="text/css">
 <link rel="stylesheet" href="/css/footerMobile.css" type="text/css">
 <link rel="stylesheet" href="/css/footerTablet.css" type="text/css">
+<link rel="stylesheet" href="/css/footerLaptop.css" type="text/css">
 <link rel="stylesheet" href="/css/footerDesktop.css" type="text/css">
 <script defer src="https://player.vimeo.com/api/player.js"></script>
 <% if (styles && styles.length > 0) { %>
