--- a/public/css/homeMobile.css
+++ b/public/css/homeMobile.css
@@ -1,8 +1,9 @@
 @media (max-width: 768px) {
     .parallax-article {
-      background-size: 50vw 100 !important;
+      background-size: 50vw 100%!important;
+      /* background-attachment: scroll !important; */
       /* height: 59.813vw !important; */
-      height: 75vw !important;
+      height: 28.2vh !important;
     }
 
     /* --------- First section backgrounds ---------*/
@@ -48,16 +49,16 @@
     }
 
     a.grouch.pt-40{
-      font-size: 1.3em;
+      font-size: 1em;
     }
 
     div.parallax-section article.parallax-article:hover div.caption-container a {
-      font-size: 1.5em !important;
+      font-size: 1.2em !important;
       translate: translateY(-10px);
     }
   
     #proyectos div.parallax-section article.parallax-article:hover div.caption-container a {
-      font-size: 1.15em;
+      font-size: 1em;
     }
 
     .kabel-demi.pt-55 {
@@ -107,15 +108,19 @@
       margin-bottom: 19.29vw;
     }
 
+    .p-3 {
+      padding: 0.3rem !important;
+    }
+
 
     /* --------- Projects backgrounds ---------*/
 
-    .parallax-section > .bg-img-antitusa {
+  .parallax-section > .bg-img-antitusa {
       background-image: url("/img/fotos version mobile 428 X 908/seccion 2 proyectos/1-Serie-Tips Antitusa  214 x 322.png") !important;
   }
   
   .parallax-section > .bg-img-restos {
-      background-image: url("/img/fotos version mobile 428 X 908/seccion 2 proyectos/2-Coming soon cortometraje los restos de la cama coproductores 214x322.png") !important;;
+      background-image: url("/img/fotos version mobile 428 X 908/seccion 2 proyectos/2-Coming soon cortometraje los restos de la cama coproductores 214x322.png") !important;
   }
   
   .parallax-section > .bg-img-opening {
@@ -127,7 +132,7 @@
   }
   
   .parallax-section > .bg-img-transmi {
-      background-image: url("/img/fotos version mobile 428 X 908/seccion 2 proyectos/5-transmilenials piloto coproductores 214x322.png") !important;;
+      background-image: url("/img/fotos version mobile 428 X 908/seccion 2 proyectos/5-transmilenials piloto coproductores 214x322.png") !important;
   }
   .parallax-section > .bg-img-pipe {
       background-image: url("/img/fotos version mobile 428 X 908/seccion 2 proyectos/6-concierto 15 aคos pipe bueno 214x322.png") !important;
@@ -141,7 +146,7 @@
       background-image: url("/img/fotos version mobile 428 X 908/seccion 2 proyectos/8-podcast - fuera de set  214 x 322 .png") !important;
   }
   .parallax-section > .bg-img-misteriosa {
-      background-image: url("/img/fotos version mobile 428 X 908/seccion 2 proyectos/9-misteriosa coproductores 214 x 322 .png") !important;;
+      background-image: url("/img/fotos version mobile 428 X 908/seccion 2 proyectos/9-misteriosa coproductores 214 x 322 .png") !important;
   }
   .parallax-section > .bg-img-nono {
       background-image: url("/img/fotos version mobile 428 X 908/seccion 2 proyectos/10-video clip no me digas que no  214x322.png") !important;
@@ -150,7 +155,7 @@
       background-image: url("/img/fotos version mobile 428 X 908/seccion 2 proyectos/11-video clip la cantina 214x322.png") !important;
   }
   .parallax-section > .bg-img-casa {
-      background-image: url("/img/fotos version mobile 428 X 908/seccion 2 proyectos/12-capsulas la casa del diseคo colombiano 214 x 322.png") !important;;
+      background-image: url("/img/fotos version mobile 428 X 908/seccion 2 proyectos/12-capsulas la casa del diseคo colombiano 214 x 322.png") !important;
   }
   .parallax-section > .bg-img-movistar {
       background-image: url("/img/fotos version mobile 428 X 908/seccion 2 proyectos/13-concierto moviestar arena 214 x 322.png") !important;
@@ -158,6 +163,23 @@
   .parallax-section > .bg-img-off {
       background-image: url("/img/fotos version mobile 428 X 908/seccion 2 proyectos/14-Coming soon Podcast Voz en OFF 214 x 322 .png") !important;
   }
+
+/* --------- Projects  ---------*/
+
+  #proyectos .caption-container.grey-wrapper.p-3{
+    max-width: 83%;
+    min-width: 82%;
+    padding: 0.07rem !important;
+  }
+
+  #proyectos div.parallax-section article.parallax-article .caption-container .grouch.pt-22, #proyectos div.parallax-section article.parallax-article .caption-container .grouch.pt-18{
+    font-size: 0.7em;
+  }
+
+  #proyectos div.parallax-section article.parallax-article:hover div.caption-container {
+    max-width: 85%;
+  }
+
 
     /* --------- Carousel ---------*/
 
@@ -210,6 +232,32 @@
       margin-bottom: 5vw;
     }
 
+    .staff-caption .pt-16 {
+      font-size: 0.818em;
+    }
+
+    .staff-caption .pt-14 {
+      font-size: 0.715em;
+    }
+
+    .staff-caption h5 {
+      margin-bottom: 0.7rem;
+    }
+
+    .staff-caption p {
+      margin-bottom: 0;
+    }
+
+    .staff-row-wrapper:first-child .staff-caption.wrapper-1:nth-child(3) {
+      margin-top: 12vw;
+    }
+    
+    .staff-row-wrapper:first-child .staff-caption.wrapper-1:first-child, .staff-row-wrapper:first-child .staff-caption.wrapper-1:nth-child(2) {
+      margin-top: 12vw;
+    }
+
+
+
   /* --------- Partners ---------*/
 
     #aliados > div:first-child, #aliados > div:nth-child(2), #contacto > div:first-child, form > div:first-child{
@@ -229,6 +277,10 @@
     #contacto > div.form-wrapper > form > div.btn-wrapper > button.btn {
       height: 10vw !important;
       width: 18vw !important;
+    }
+
+    .form-control {
+      font-size: 0.8em;
     }
 
   }
